Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45757

TableView don't receive KeyEvent with QQuickWidget

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9
    • 5.4.1, 5.5.0, 5.6.0, 5.7.0, 5.8.0, 5.9
    • Quick: Widget
    • None
    • Linux Mint 17.1 - x64
    • 0dbc575c1a8359534761167a5f5f1e29abedd51d

    Description

      Hllo everybody,

      I load a qml file that contains a TableView with QQuickWidget. The TableView doesn't get keyboard events (Up Button and Down Button to navigate in TableView)

      But when i try with QWidget::createWindowContainer() it work.

      The attached example can explain more.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-45757
          # Subject Branch Project Status CR V

          Activity

            People

              lagocs Laszlo Agocs
              mr malek khlif Malek Khlif
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes